@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_ADDRESS;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_BODY;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_EMAIL;
+import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_JOB_INDEX;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_NAME;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_PHONE;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_PRODUCT_DESCRIPTION;
@@ -13,6 +14,7 @@ import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_PRODUCT_NAME;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_PRODUCT_TYPE;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_SUBJECT;
 import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_TAG;
+import static seedu.mycrm.logic.parser.CliSyntax.PREFIX_TEMPLATE_INDEX;
 import static seedu.mycrm.testutil.Assert.assertThrows;
 import static seedu.mycrm.testutil.ProductBuilder.DEFAULT_PRODUCT_ONE_DESCRIPTION;
 import static seedu.mycrm.testutil.ProductBuilder.DEFAULT_PRODUCT_ONE_MANUFACTURER;
@@ -24,7 +26,6 @@ import static seedu.mycrm.testutil.ProductBuilder.DEFAULT_PRODUCT_TWO_NAME;
 import static seedu.mycrm.testutil.ProductBuilder.DEFAULT_PRODUCT_TWO_TYPE;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -62,8 +63,8 @@ public class CommandTestUtil {
     public static final String VALID_EMAIL_BOB = "bob@example.com";
     public static final String VALID_ADDRESS_AMY = "Block 312, Amy Street 1";
     public static final String VALID_ADDRESS_BOB = "Block 123, Bobby Street 3";
-    public static final String VALID_TAG_HUSBAND = "husband";
-    public static final String VALID_TAG_FRIEND = "friend";
+    public static final String VALID_TAG_FIRST_TIER = "1st tier";
+    public static final String VALID_TAG_SECOND_TIER = "2nd tier";
 
     public static final String NAME_DESC_AMY = " " + PREFIX_NAME + VALID_NAME_AMY;
     public static final String NAME_DESC_BOB = " " + PREFIX_NAME + VALID_NAME_BOB;
@@ -73,14 +74,14 @@ public class CommandTestUtil {
     public static final String EMAIL_DESC_BOB = " " + PREFIX_EMAIL + VALID_EMAIL_BOB;
     public static final String ADDRESS_DESC_AMY = " " + PREFIX_ADDRESS + VALID_ADDRESS_AMY;
     public static final String ADDRESS_DESC_BOB = " " + PREFIX_ADDRESS + VALID_ADDRESS_BOB;
-    public static final String TAG_DESC_FRIEND = " " + PREFIX_TAG + VALID_TAG_FRIEND;
-    public static final String TAG_DESC_HUSBAND = " " + PREFIX_TAG + VALID_TAG_HUSBAND;
+    public static final String TAG_DESC_SECOND_TIER = " " + PREFIX_TAG + VALID_TAG_SECOND_TIER;
+    public static final String TAG_DESC_FIRST_TIER = " " + PREFIX_TAG + VALID_TAG_FIRST_TIER;
 
     public static final String INVALID_NAME_DESC = " " + PREFIX_NAME + "James&"; // '&' not allowed in names
     public static final String INVALID_PHONE_DESC = " " + PREFIX_PHONE + "911a"; // 'a' not allowed in phones
     public static final String INVALID_EMAIL_DESC = " " + PREFIX_EMAIL + "bob!yahoo"; // missing '@' symbol
     public static final String INVALID_ADDRESS_DESC = " " + PREFIX_ADDRESS; // empty string not allowed for addresses
-    public static final String INVALID_TAG_DESC = " " + PREFIX_TAG + "hubby*"; // '*' not allowed in tags
+    public static final String INVALID_TAG_DESC = " " + PREFIX_TAG + "cooperation friend*"; // '*' not allowed in tags
 
     public static final String PREAMBLE_WHITESPACE = "\t  \r  \n";
     public static final String PREAMBLE_NON_EMPTY = "NonEmptyPreamble";
@@ -92,12 +93,23 @@ public class CommandTestUtil {
     public static final String VALID_BODY_COMPLETE = "Your order has been completed and ready for collection";
 
     public static final String SUBJECT_DESC_COMPLETE = " " + PREFIX_SUBJECT + VALID_SUBJECT_COMPLETE;
-    public static final String BODY_DESC_COMPLETE = " " + PREFIX_BODY + VALID_BODY_COMPLETE;
     public static final String SUBJECT_DESC_DONE = " " + PREFIX_SUBJECT + VALID_SUBJECT_DONE;
+    public static final String BODY_DESC_COMPLETE = " " + PREFIX_BODY + VALID_BODY_COMPLETE;
     public static final String BODY_DESC_DONE = " " + PREFIX_BODY + VALID_BODY_DONE;
     public static final String INVALID_SUBJECT_DESC = " " + PREFIX_SUBJECT + "W#lcome";
     public static final String INVALID_BODY_DESC = " " + PREFIX_BODY + " ";
     public static final int HEAD_SUBJECT_SIZE = 2;
+
+    public static final String VALID_JOB_INDEX_1 = "1";
+    public static final String VALID_JOB_INDEX_2 = "2";
+    public static final String VALID_TEMPLATE_INDEX_1 = "1";
+    public static final String VALID_TEMPLATE_INDEX_2 = "2";
+    public static final String JOB_INDEX_DESC_1 = " " + PREFIX_JOB_INDEX + VALID_JOB_INDEX_1;
+    public static final String JOB_INDEX_DESC_2 = " " + PREFIX_JOB_INDEX + VALID_JOB_INDEX_2;
+    public static final String TEMPLATE_INDEX_DESC_1 = " " + PREFIX_TEMPLATE_INDEX + VALID_TEMPLATE_INDEX_1;
+    public static final String TEMPLATE_INDEX_DESC_2 = " " + PREFIX_TEMPLATE_INDEX + VALID_TEMPLATE_INDEX_2;
+    public static final String INVALID_JOB_INDEX_DESC = " " + PREFIX_JOB_INDEX + " w";
+    public static final String INVALID_TEMPLATE_INDEX_DESC = " " + PREFIX_TEMPLATE_INDEX + " #";
 
     public static final EditTemplateDescriptor DESC_DONE;
     public static final EditTemplateDescriptor DESC_COMPLETE;
@@ -133,10 +145,10 @@ public class CommandTestUtil {
     static {
         DESC_AMY = new EditContactDescriptorBuilder().withName(VALID_NAME_AMY)
                 .withPhone(VALID_PHONE_AMY).withEmail(VALID_EMAIL_AMY).withAddress(VALID_ADDRESS_AMY)
-                .withTags(VALID_TAG_FRIEND).build();
+                .withTags(VALID_TAG_SECOND_TIER).build();
         DESC_BOB = new EditContactDescriptorBuilder().withName(VALID_NAME_BOB)
                 .withPhone(VALID_PHONE_BOB).withEmail(VALID_EMAIL_BOB).withAddress(VALID_ADDRESS_BOB)
-                .withTags(VALID_TAG_HUSBAND, VALID_TAG_FRIEND).build();
+                .withTags(VALID_TAG_FIRST_TIER, VALID_TAG_SECOND_TIER).build();
         DESC_DONE = new EditTemplateDescriptorBuilder().withSubject(VALID_SUBJECT_DONE)
                 .withBody(VALID_BODY_DONE).build();
         DESC_COMPLETE = new EditTemplateDescriptorBuilder().withSubject(VALID_SUBJECT_COMPLETE)
@@ -187,15 +199,15 @@ public class CommandTestUtil {
         assertEquals(expectedFilteredList, actualModel.getFilteredContactList());
     }
     /**
-     * Updates {@code model}'s filtered list to show only the contact at the given {@code targetIndex} in the
-     * {@code model}'s myCrm.
+     * Updates {@code model}'s filtered unhidden contacts list to show only the contact at the given {@code targetIndex}
+     * in the {@code model}'s myCrm.
      */
     public static void showContactAtIndex(Model model, Index targetIndex) {
         assertTrue(targetIndex.getZeroBased() < model.getFilteredContactList().size());
 
         Contact contact = model.getFilteredContactList().get(targetIndex.getZeroBased());
         final String[] splitName = contact.getName().fullName.split("\\s+");
-        model.updateFilteredContactList(new NameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        model.updateFilteredContactList(new NameContainsKeywordsPredicate(List.of(splitName[0])));
 
         assertEquals(1, model.getFilteredContactList().size());
     }
@@ -225,7 +237,7 @@ public class CommandTestUtil {
 
         Product product = model.getFilteredProductList().get(targetIndex.getZeroBased());
         final String[] splitName = product.getName().orElse("").split("\\s+");
-        model.updateFilteredProductList(new ProductNameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        model.updateFilteredProductList(new ProductNameContainsKeywordsPredicate(List.of(splitName[0])));
 
         assertEquals(1, model.getFilteredProductList().size());
     }
